# qt-location-plugin-wmts

./: CMakeLists.txt  LICENSE
demo/: CMakeLists.txt  CmakeLists.txt  demo.qml  main.cpp
plugin/: CMakeLists.txt  CmakeLists.txt  qgeomapreplywmts.cpp  qgeomapreplywmts.h  qgeoserviceproviderpluginwmts.cpp  qgeoserviceproviderpluginwmts.h  qgeotiledmappingmanagerenginewmts.cpp  qgeotiledmappingmanagerenginewmts.h  qgeotilefetcherwmts.cpp  qgeotilefetcherwmts.h  qgeotileproviderwmts.cpp  qgeotileproviderwmts.h  serviceparser.cpp  serviceparser.h  wmts_plugin.json
plugin/test/: CMakeLists.txt  serviceparsertest.cpp
plugin/test/data/: servicedesc.xml
